; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/spufs/extr_backing_ops.c_spu_backing_wbox_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/platforms/cell/spufs/extr_backing_ops.c_spu_backing_wbox_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spu_context = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32*, i32, %struct.TYPE_5__, %struct.TYPE_4__, i32* }
%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32 }

@MFC_SPU_MAILBOX_WRITTEN_EVENT = common dso_local global i32 0, align 4
@CLASS2_ENABLE_MAILBOX_THRESHOLD_INTR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.spu_context*, i32)* @spu_backing_wbox_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @spu_backing_wbox_write(%struct.spu_context* %0, i32 %1) #0 {
  %3 = alloca %struct.spu_context*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.spu_context* %0, %struct.spu_context** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.spu_context*, %struct.spu_context** %3, align 8
  %9 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %8, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %9, i32 0, i32 1
  %11 = call i32 @spin_lock(i32* %10)
  %12 = load %struct.spu_context*, %struct.spu_context** %3, align 8
  %13 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %12, i32 0, i32 0
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 3
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = and i32 %16, 65280
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %73

19:                                               ; preds = %2
  %20 = load %struct.spu_context*, %struct.spu_context** %3, align 8
  %21 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %20, i32 0, i32 0
  %22 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %21, i32 0, i32 0
  %23 = load i32*, i32** %22, align 8
  %24 = getelementptr inbounds i32, i32* %23, i64 29
  %25 = load i32, i32* %24, align 4
  store i32 %25, i32* %6, align 4
  %26 = load %struct.spu_context*, %struct.spu_context** %3, align 8
  %27 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 3
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = and i32 %30, 65280
  %32 = ashr i32 %31, 8
  store i32 %32, i32* %7, align 4
  %33 = load i32, i32* %7, align 4
  %34 = load i32, i32* %6, align 4
  %35 = sub nsw i32 4, %34
  %36 = icmp ne i32 %33, %35
  %37 = zext i1 %36 to i32
  %38 = call i32 @BUG_ON(i32 %37)
  %39 = load i32, i32* %4, align 4
  %40 = load %struct.spu_context*, %struct.spu_context** %3, align 8
  %41 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %41, i32 0, i32 4
  %43 = load i32*, i32** %42, align 8
  %44 = load i32, i32* %6, align 4
  %45 = sext i32 %44 to i64
  %46 = getelementptr inbounds i32, i32* %43, i64 %45
  store i32 %39, i32* %46, align 4
  %47 = load i32, i32* %6, align 4
  %48 = add nsw i32 %47, 1
  store i32 %48, i32* %6, align 4
  %49 = load %struct.spu_context*, %struct.spu_context** %3, align 8
  %50 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %49, i32 0, i32 0
  %51 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %50, i32 0, i32 0
  %52 = load i32*, i32** %51, align 8
  %53 = getelementptr inbounds i32, i32* %52, i64 29
  store i32 %48, i32* %53, align 4
  %54 = load %struct.spu_context*, %struct.spu_context** %3, align 8
  %55 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %54, i32 0, i32 0
  %56 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %55, i32 0, i32 3
  %57 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %56, i32 0, i32 0
  %58 = load i32, i32* %57, align 8
  %59 = and i32 %58, -65281
  store i32 %59, i32* %57, align 8
  %60 = load i32, i32* %6, align 4
  %61 = sub nsw i32 4, %60
  %62 = and i32 %61, 255
  %63 = shl i32 %62, 8
  %64 = load %struct.spu_context*, %struct.spu_context** %3, align 8
  %65 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %64, i32 0, i32 0
  %66 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %65, i32 0, i32 3
  %67 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %66, i32 0, i32 0
  %68 = load i32, i32* %67, align 8
  %69 = or i32 %68, %63
  store i32 %69, i32* %67, align 8
  %70 = load %struct.spu_context*, %struct.spu_context** %3, align 8
  %71 = load i32, i32* @MFC_SPU_MAILBOX_WRITTEN_EVENT, align 4
  %72 = call i32 @gen_spu_event(%struct.spu_context* %70, i32 %71)
  store i32 4, i32* %5, align 4
  br label %81

73:                                               ; preds = %2
  %74 = load i32, i32* @CLASS2_ENABLE_MAILBOX_THRESHOLD_INTR, align 4
  %75 = load %struct.spu_context*, %struct.spu_context** %3, align 8
  %76 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %75, i32 0, i32 0
  %77 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %76, i32 0, i32 2
  %78 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %77, i32 0, i32 0
  %79 = load i32, i32* %78, align 4
  %80 = or i32 %79, %74
  store i32 %80, i32* %78, align 4
  store i32 0, i32* %5, align 4
  br label %81

81:                                               ; preds = %73, %19
  %82 = load %struct.spu_context*, %struct.spu_context** %3, align 8
  %83 = getelementptr inbounds %struct.spu_context, %struct.spu_context* %82, i32 0, i32 0
  %84 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %83, i32 0, i32 1
  %85 = call i32 @spin_unlock(i32* %84)
  %86 = load i32, i32* %5, align 4
  ret i32 %86
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @gen_spu_event(%struct.spu_context*, i32) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
